
cc_library(
	name = "uuid",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_random//:random",
		"@com_github_bazelboost_winapi//:winapi",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_io//:io",
		"@com_github_bazelboost_serialization//:serialization"
	],
)
